methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:2: error: not found: value dogHouse
  dogHouse()
  ^MethodsDogHouse:5: error: not found: value dogHouse
dogHouse()
^MethodsDogHouse:12: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:18: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:28: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:38: error: not found: value dogHouse
		dogHouse();		
                ^