methods.basics.MethodsDogHouse.scala.code
for(i <- 1 to 6){
  dogHouse()
  avance()
}
dogHouse()
